added event components, imprint and photographer search apge

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,7 +19,8 @@
     "SIGNIN": "Sign in",
     "SIGNUP": "Sign up",
     "LOGOUT": "Log out",
-    "DASHBOARD": "Dashboard"
+    "DASHBOARD": "Dashboard",
+    "SEARCH": "Photographer near you"
   },
   "INPUTS": {
     "USER_EMAIL": "Your email",
