--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,56 +1,58 @@
 {
   "DASHBOARD": {
+    "ADMIN": "Admin",
+    "DATE": "Date",
+    "EDIT": "Edit",
     "EMAIL": "Email",
+    "LOCATION": "Location",
+    "NAME": "Name",
+    "PHOTOGRAPHER": "Photographer",
+    "PICTURES": "Pictures",
     "ROLE": "Role",
     "SUBSCRIPTION": "Subscription",
-    "EDIT": "Edit",
-    "ADMIN": "Admin",
-    "PHOTOGRAPHER": "Photographer",
-    "USER": "User",
-    "NAME": "Name",
-    "DATE": "Date",
-    "LOCATION": "Location",
-    "PICTURES": "Pictures"
+    "USER": "User"
   },
   "NAV": {
-    "HOME": "Home",
-    "FEATURES": "Features",
-    "PRICES": "Prices",
-    "SIGNIN": "Sign in",
-    "SIGNUP": "Sign up",
-    "LOGOUT": "Log out",
     "DASHBOARD": "Dashboard",
-    "SEARCH": "Photographer near you"
+    "FEATURES": "Features",
+    "HOME": "Home",
+    "LOGOUT": "Log out",
+    "PRICES": "Prices",
+    "SEARCH": "Photographer near you",
+    "SIGNIN": "Sign in",
+    "SIGNUP": "Sign up"
   },
   "INPUTS": {
-    "USER_EMAIL": "Your E-Mail",
-    "USER_PASSWORD": "Your password",
-    "CONFIRM_PASSWORD": "Confirm your password",
-    "PROFILE_URL": "Profile URL",
-    "NAME": "Name",
-    "LASTNAME": "Lastname",
-    "CONTACT_EMAIL": "Contact E-Mail",
-    "COMPANY": "Company",
-    "PHONE": "Phone",
-    "STREET": "Street",
-    "STREET_NUMBER": "Streetnumber",
-    "CITY": "City",
-    "ZIP": "ZIP",
-    "DISPLAY_NAME": "Displayed name",
     "ABOUT_YOU": "About you",
+    "CITY": "City",
+    "COMPANY": "Company",
+    "CONFIRM_PASSWORD": "Confirm your password",
+    "CONTACT_EMAIL": "Contact E-Mail",
+    "DISPLAY_NAME": "Displayed name",
     "FACEBOOK_PROFILE": "Facebook profile",
     "INSTAGRAM_PROFILE": "Instagram profile",
+    "LASTNAME": "Lastname",
+    "NAME": "Name",
+    "PHONE": "Phone",
+    "PROFILE_URL": "Profile URL",
+    "STREET_NUMBER": "Streetnumber",
+    "STREET": "Street",
     "TUMBLER_PROFILE": "Tumbler profile",
     "TWITTER_PROFILE": "Twitter profile",
-    "WBESITE": "Website"
+    "USER_EMAIL": "Your E-Mail",
+    "USER_PASSWORD": "Your password",
+    "WBESITE": "Website",
+    "ZIP": "ZIP"
   },
   "BUTTONS": {
-    "LOGIN": "Sign in",
     "CANCEL": "Cancel",
+    "LOGIN": "Sign in",
     "RESET_PASSWORD": "Reset Password",
     "UPDATE_PROFILE": "Update Profile"
   },
   "LABELS": {
+    "ACCOUNT_DATA": "Account Data",
+    "BILLING_INFORMATION": "Billing Information",
     "CREATE_NEW_EVENT": "Create new event",
     "CREATE": "Create",
     "EVENT_DATE": "Event date",
@@ -59,15 +61,13 @@
     "FORGOT_PASSWORD": "Forgot Password?",
     "LOGIN": "Sign in",
     "NO_MEMBER": "Not a member?",
+    "PUBLIC_PROFILE": "Public Profile",
     "RESET_PASSWORD": "Reset Password",
     "SIGN_IN_WITH": "or Sign in with:",
     "SIGN_UP_WITH": "Or Signup with:",
     "SIGN_UP": "Sign Up",
     "SIGNUP_AS_PHOTOGRAPHER": "Signup as new photographer",
-    "SIGNUP_AS_USER": "Signup as new user",
-    "ACCOUNT_DATA": "Account Data",
-    "BILLING_INFORMATION": "Billing Information",
-    "PUBLIC_PROFILE": "Public Profile"
+    "SIGNUP_AS_USER": "Signup as new user"
   },
   "TEXTS": {
     "PASSWORT_RESET_MODAL":
