--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,3 +1,121 @@
 {
-    "TEST": "test"
+  "DASHBOARD": {
+    "ADMIN": "Administrator",
+    "DATE": "Datum",
+    "EDIT": "Bearbeiten",
+    "EMAIL": "Email",
+    "LOCATION": "Ort",
+    "NAME": "Name",
+    "PHOTOGRAPHER": "Fotograf",
+    "PICTURES": "Bilder",
+    "RATINGS": "Bewertungen",
+    "ROLE": "Rolle",
+    "SUBSCRIPTION": "Abonnement",
+    "USER": "Benutzer"
+  },
+  "NAV": {
+    "DASHBOARD": "Instrumententafel",
+    "FEATURES": "Eigenschaften",
+    "HOME": "Zuhause",
+    "LOGOUT": "Ausloggen",
+    "PRICES": "Preise",
+    "SEARCH": "Fotograf in Ihrer Nähe",
+    "SIGNIN": "Anmelden",
+    "SIGNUP": "Anmelden"
+  },
+  "INPUTS": {
+    "ABOUT_YOU": "Über dich",
+    "ACCOUNT_OWNER": "Kontoinhaber",
+    "BIC": "BIC",
+    "CITY": "Stadt",
+    "COMPANY": "Unternehmen",
+    "CONFIRM_PASSWORD": "Bestätigen Sie Ihr Passwort",
+    "CONTACT_EMAIL": "Kontakt E-mail",
+    "DISPLAY_NAME": "Angezeigter Name",
+    "FACEBOOK_PROFILE": "Facebook Profil",
+    "IBAN": "IBAN",
+    "INSTAGRAM_PROFILE": "Instagram-Profil",
+    "LASTNAME": "Familienname, Nachname",
+    "NAME": "Name",
+    "PHONE": "Telefon",
+    "PROFILE_URL": "Profil-URL",
+    "STREET_NUMBER": "Hausnummer",
+    "STREET": "Straße",
+    "TUMBLER_PROFILE": "Tumblerprofil",
+    "TWITTER_PROFILE": "Twitter-Profil",
+    "USER_EMAIL": "Deine E-Mail",
+    "USER_PASSWORD": "Ihr Passwort",
+    "WBESITE": "Webseite",
+    "ZIP": "POSTLEITZAHL"
+  },
+  "BUTTONS": {
+    "CANCEL": "Stornieren",
+    "LOGIN": "Anmelden",
+    "RESET_PASSWORD": "Passwort zurücksetzen",
+    "UPDATE_PROFILE": "Profil aktualisieren",
+    "SAVE": "sparen",
+    "UPDATE_EVENT": "Ereignis aktualisieren",
+    "UPDATE_USER": "Benutzer aktualisieren"
+  },
+  "LABELS": {
+    "ACCOUNT_DATA": "Kontodaten",
+    "BILLING_INFORMATION": "Abrechnungsdaten",
+    "CREATE_NEW_EVENT": "Erstellen Sie ein neues Ereignis",
+    "CREATE": "Erstellen",
+    "EVENT_DATE": "Veranstaltungsdatum",
+    "EVENT_LOCATION": "Veranstaltungsort",
+    "EVENT_NAME": "Veranstaltungsname",
+    "FORGOT_PASSWORD": "Passwort vergessen?",
+    "LOGIN": "Anmelden",
+    "NO_MEMBER": "Kein Mitglied?",
+    "PUBLIC_PROFILE": "Öffentliches Profil",
+    "RESET_PASSWORD": "Passwort zurücksetzen",
+    "SIGN_IN_WITH": "oder Anmelden mit:",
+    "SIGN_UP_WITH": "Oder Anmeldung mit:",
+    "SIGN_UP": "Anmelden",
+    "SIGNUP_AS_PHOTOGRAPHER": "Melde dich als neuer Fotograf an",
+    "SIGNUP_AS_USER": "Melden Sie sich als neuer Benutzer an",
+    "EDIT_EVENT": "Veranstaltung bearbeiten",
+    "EDIT_USER": "Benutzer bearbeiten"
+  },
+  "TEXTS": {
+    "PASSWORT_RESET_MODAL":
+      "Zu welcher E-Mail-Adresse sollte die E-Mail zum Zurücksetzen des Passworts gesendet werden?",
+    "PROVIDE_VALID_EMAIL": "Bitte geben Sie eine gültige E-Mail-Adresse an",
+    "PROVIDE_VALID_PASSWORD": "Bitte geben Sie ein gültiges Passwort an",
+    "PROVIDE_VALID_URL": "Bitte geben Sie eine gültige URL an"
+  },
+  "TABS": {
+    "EVENTS": "Veranstaltungen",
+    "PRINTING_HOUSES": "Druckerei",
+    "PROFILE": "Profil",
+    "REVENUE": "Einnahmen",
+    "SALES": "Der Umsatz",
+    "SUBSCRIPTION": "Abonnement",
+    "USER": "Benutzer"
+  },
+  "FIREBASE_ERRORS": {
+    "auth/app-deleted": "Firebase-Projekt wurde gelöscht",
+    "auth/app-not-authorized": "App ist nicht autorisiert",
+    "auth/argument-error": "Falsche Argumente",
+    "auth/email-already-in-use": "E-Mail wird bereits verwendet",
+    "auth/invalid-api-key": "Ungültiger API-Schlüssel",
+    "auth/invalid-credential": "Ungültige Anmeldeinformationen",
+    "auth/invalid-email": "Ungültige E-Mail",
+    "auth/invalid-user-token": "Ungültiger Benutzer toke",
+    "auth/invalid-verification-code": "Ungültiger Bestätigungscode",
+    "auth/invalid-verification-id": "Ungültige Verifizierungs-ID",
+    "auth/network-request-failed": "Die Netzwerkanfrage ist fehlgeschlagen",
+    "auth/operation-not-allowed": "Operation nicht erlaubt",
+    "auth/requires-recent-login": "Erfordert die letzte Anmeldung",
+    "auth/too-many-requests": "Zu viele Anfragen",
+    "auth/unauthorized-domain": "Nicht autorisierte Domain",
+    "auth/user-disabled": "Benutzer deaktiviert",
+    "auth/user-mismatch": "Benutzerkonflikt",
+    "auth/user-not-found": "Benutzer nicht gefunden",
+    "auth/user-token-expired": "Benutzer-Token ist abgelaufen",
+    "auth/weak-password": "Schwaches Passwort",
+    "auth/web-storage-unsupported": "Der Webspeicher wird nicht unterstützt",
+    "auth/wrong-password": "Falsches Passwort"
+  }
 }
