--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,6 +8,7 @@
     "NAME": "Name",
     "PHOTOGRAPHER": "Photographer",
     "PICTURES": "Pictures",
+    "RATINGS": "Ratings",
     "ROLE": "Role",
     "SUBSCRIPTION": "Subscription",
     "USER": "User"
@@ -24,12 +25,15 @@
   },
   "INPUTS": {
     "ABOUT_YOU": "About you",
+    "ACCOUNT_OWNER": "Account Owner",
+    "BIC": "BIC",
     "CITY": "City",
     "COMPANY": "Company",
     "CONFIRM_PASSWORD": "Confirm your password",
     "CONTACT_EMAIL": "Contact E-Mail",
     "DISPLAY_NAME": "Displayed name",
     "FACEBOOK_PROFILE": "Facebook profile",
+    "IBAN": "IBAN",
     "INSTAGRAM_PROFILE": "Instagram profile",
     "LASTNAME": "Lastname",
     "NAME": "Name",
@@ -48,7 +52,10 @@
     "CANCEL": "Cancel",
     "LOGIN": "Sign in",
     "RESET_PASSWORD": "Reset Password",
-    "UPDATE_PROFILE": "Update Profile"
+    "UPDATE_PROFILE": "Update Profile",
+    "SAVE": "Save",
+    "UPDATE_EVENT": "Update Event",
+    "UPDATE_USER": "Update User"
   },
   "LABELS": {
     "ACCOUNT_DATA": "Account Data",
@@ -67,7 +74,9 @@
     "SIGN_UP_WITH": "Or Signup with:",
     "SIGN_UP": "Sign Up",
     "SIGNUP_AS_PHOTOGRAPHER": "Signup as new photographer",
-    "SIGNUP_AS_USER": "Signup as new user"
+    "SIGNUP_AS_USER": "Signup as new user",
+    "EDIT_EVENT": "Edit Event",
+    "EDIT_USER": "Edit User"
   },
   "TEXTS": {
     "PASSWORT_RESET_MODAL":
@@ -86,27 +95,27 @@
     "USER": "User"
   },
   "FIREBASE_ERRORS": {
-    "auth/app-deleted": "",
-    "auth/app-not-authorized": "",
-    "auth/argument-error": "",
-    "auth/email-already-in-use": "",
-    "auth/invalid-api-key": "",
-    "auth/invalid-credential": "",
-    "auth/invalid-email": "",
-    "auth/invalid-user-token": "",
-    "auth/invalid-verification-code": "",
-    "auth/invalid-verification-id": "",
-    "auth/network-request-failed": "",
-    "auth/operation-not-allowed": "",
-    "auth/requires-recent-login": "",
-    "auth/too-many-requests": "",
-    "auth/unauthorized-domain": "",
-    "auth/user-disabled": "",
-    "auth/user-mismatch": "",
-    "auth/user-not-found": "",
-    "auth/user-token-expired": "",
-    "auth/weak-password": "",
-    "auth/web-storage-unsupported": "",
-    "auth/wrong-password": ""
+    "auth/app-deleted": "Firebase project deleted",
+    "auth/app-not-authorized": "App is not authorized",
+    "auth/argument-error": "Wrong arguments",
+    "auth/email-already-in-use": "E-Mail is already in use",
+    "auth/invalid-api-key": "Invalid API key",
+    "auth/invalid-credential": "Invalid credential",
+    "auth/invalid-email": "Invalid E-Mail",
+    "auth/invalid-user-token": "Invalid user toke",
+    "auth/invalid-verification-code": "Invalid verification code",
+    "auth/invalid-verification-id": "Invalid verifivation ID",
+    "auth/network-request-failed": "Network request failed",
+    "auth/operation-not-allowed": "Operation not allowed",
+    "auth/requires-recent-login": "Requires recent login",
+    "auth/too-many-requests": "Too many requests",
+    "auth/unauthorized-domain": "Unauthorized domain",
+    "auth/user-disabled": "User disabled",
+    "auth/user-mismatch": "User mismatch",
+    "auth/user-not-found": "User not found",
+    "auth/user-token-expired": "User token expired",
+    "auth/weak-password": "Weak password",
+    "auth/web-storage-unsupported": "Web storage is unsupported",
+    "auth/wrong-password": "Wrong password"
   }
 }
