--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -55,7 +55,7 @@
     "UPDATE_PROFILE": "Update Profile",
     "SAVE": "Save",
     "UPDATE_EVENT": "Update Event",
-    "UPDATE_USER": "Update User"
+    "UPDATE_USER": "Update User",
     "CANCEL": "Cancel",
     "RESET_PASSWORD": "Reset Password",
     "ABO": "Buy now"
