--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,27 +32,6 @@
     "CONFIRM_PASSWORD": "Confirm your password",
     "CONTACT_EMAIL": "Contact E-Mail",
     "DISPLAY_NAME": "Displayed name",
-    "EMAIL": "Email",
-    "FACEBOOK_PROFILE": "Facebook profile",
-    "IBAN": "IBAN",
-    "INSTAGRAM_PROFILE": "Instagram profile",
-    "LASTNAME": "Lastname",
-    "NAME": "Name",
-    "PHONE": "Phone",
-    "PROFILE_URL": "Profile URL",
-    "STREET_NUMBER": "Streetnumber",
-    "STREET": "Street",
-    "TUMBLER_PROFILE": "Tumbler profile",
-    "TWITTER_PROFILE": "Twitter profile",
-    "USER_EMAIL": "Your E-Mail",
-    "ABOUT_YOU": "About you",
-    "ACCOUNT_OWNER": "Account Owner",
-    "BIC": "BIC",
-    "CITY": "City",
-    "COMPANY": "Company",
-    "CONFIRM_PASSWORD": "Confirm your password",
-    "CONTACT_EMAIL": "Contact E-Mail",
-    "DISPLAY_NAME": "Displayed name",
     "FACEBOOK_PROFILE": "Facebook profile",
     "IBAN": "IBAN",
     "INSTAGRAM_PROFILE": "Instagram profile",
@@ -70,14 +49,7 @@
     "ZIP": "ZIP"
   },
   "BUTTONS": {
-    "CANCEL": "Cancel",
     "LOGIN": "Sign in",
-    "RESET_PASSWORD": "Reset Password",
-    "UPDATE_PROFILE": "Update Profile",
-    "SAVE": "Save",
-    "UPDATE_EVENT": "Update Event",
-    "UPDATE_USER": "Update User"
-    "RESET_PASSWORD": "Reset Password",
     "UPDATE_PROFILE": "Update Profile",
     "SAVE": "Save",
     "UPDATE_EVENT": "Update Event",
@@ -87,6 +59,7 @@
     "ABO": "Buy now"
   },
   "LABELS": {
+    "ADDRESS": "Address",
     "ACCOUNT_DATA": "Account Data",
     "BILLING_INFORMATION": "Billing Information",
     "CREATE_NEW_EVENT": "Create new event",
