--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,11 +22,15 @@
     "SEARCH": "Photographer near you",
     "SIGNIN": "Sign in",
     "SIGNUP": "Sign up",
-    "LOGOUT": "Log out",
-    "DASHBOARD": "Dashboard",
     "CONTACT_DETAILS": "Contact details",
     "PAYMENT_DELIVERY": "Payment/Delivery",
-    "CHECK_ORDER": "Check order"
+    "CHECK_ORDER": "Check order",
+    "CART_QUANTITY": "Quantity",
+    "CART_PICTURE": "Picture",
+    "CART_SIZE": "Size",
+    "CART_PRICE": "Price",
+    "CART_TYPE": "Type",
+    "CART_EVENT": "Event"
   },
   "INPUTS": {
     "ABOUT_YOU": "About you",
@@ -61,7 +65,9 @@
     "UPDATE_EVENT": "Update Event",
     "UPDATE_USER": "Update User",
     "CANCEL": "Cancel",
-    "RESET_PASSWORD": "Reset Password"
+    "RESET_PASSWORD": "Reset Password",
+    "CONTINUE_SHOPPING": "Continue shopping",
+    "PROCEED_TO_CHECKOUT": "Proceed to checkout"
   },
   "LABELS": {
     "ADDRESS": "Address",
@@ -82,13 +88,8 @@
     "SIGN_UP": "Sign Up",
     "SIGNUP_AS_PHOTOGRAPHER": "Signup as new photographer",
     "SIGNUP_AS_USER": "Signup as new user",
-    "SIGNUP_AS_PHOTOGRAPHER": "Signup as new photographer",
-    "SIGN_UP_WITH": "Or Signup with:",
-    "CREATE_NEW_EVENT": "Create new event",
-    "CREATE": "Create",
-    "EVENT_NAME": "Event name",
-    "EVENT_LOCATION": "Event location",
-    "EVENT_DATE": "Event date"
+    "TOTAL": "Total",
+    "SHOPPING_CART": "Shopping cart"
   },
   "TEXTS": {
     "PASSWORT_RESET_MODAL":
