--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -68,7 +68,7 @@
     "CANCEL": "Cancel",
     "RESET_PASSWORD": "Reset Password",
     "CONTINUE_SHOPPING": "Continue shopping",
-    "PROCEED_TO_CHECKOUT": "Proceed to checkout"
+    "PROCEED_TO_CHECKOUT": "Proceed to checkout",
     "ABO": "Buy now",
     "LOGINNOW": "Login Now",
     "FIND_EVENT": "Find your event",
