user can deleate images

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -129,7 +129,7 @@
     "PRICING_CANCEL": "Monthly cancellable"
   },
   "TABS": {
-    "EDIT_IMAGES": "Edit Images",
+    "IMAGES": "Images",
     "EVENT_SETTINGS": "Event Settings",
     "EVENTS": "Events",
     "GALLERY": "Gallery",
