--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -68,8 +68,8 @@
     "CANCEL": "Cancel",
     "RESET_PASSWORD": "Reset Password",
     "CONTINUE_SHOPPING": "Continue shopping",
-    "PROCEED_TO_CHECKOUT": "Proceed to checkout"
-    "ABO": "Buy now",
+    "PROCEED_TO_CHECKOUT": "Proceed to checkout",
+    "ABO": "Buy now"
   },
   "LABELS": {
     "ADDRESS": "Address",
@@ -103,7 +103,8 @@
     "EVENT_PASSWORD": "Password"
   },
   "TEXTS": {
-    "PASSWORT_RESET_MODAL": "To which email address should the password reset email be sent?",
+    "PASSWORT_RESET_MODAL":
+      "To which email address should the password reset email be sent?",
     "PROVIDE_VALID_EMAIL": "Please provide a valid email",
     "PROVIDE_VALID_PASSWORD": "Please provide a valid password",
     "PROVIDE_VALID_URL": "Please provide a valid URL",
@@ -111,7 +112,8 @@
     "PAGE_NOT_FOUND_DESCRIPTION": "Looks like someone left the lens cap on...",
     "PRICING_TITLE": "Pricing Guide",
     "PRICING_GET_STARTED": "Get started",
-    "PRICING_DESCRIPTION": "with your first free album or upgrade to one of our plans.",
+    "PRICING_DESCRIPTION":
+      "with your first free album or upgrade to one of our plans.",
     "PRICING_MONTH": "events per month",
     "PRICING_MONTHLY": "month",
     "PRICING_PICTURE_AMOUNT": "pictures per album",
