--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -68,22 +68,29 @@
     "CONTINUE_SHOPPING": "Continue shopping",
     "PROCEED_TO_CHECKOUT": "Proceed to checkout",
     "BACK": "Back",
-    "SEND_ORDER": "Buy Now"
+    "NEXT":"Next",
+    "SEND_ORDER": "Pay Pal Button"
 
 
   },
   "LABELS": {
     "ADDRESS": "Address",
     "ACCOUNT_DATA": "Account Data",
+    "BILLING_ADDRESS": "Billing Address",
     "BILLING_INFORMATION": "Billing Information",
     "CREATE_NEW_EVENT": "Create new event",
     "CREATE": "Create",
+    "CONTACT_DETAILS":"Contact-Details",
+    "DELIVERY_ADDRESS":"Delivery Adress",
     "EVENT_DATE": "Event date",
     "EVENT_LOCATION": "Event location",
     "EVENT_NAME": "Event name",
     "FORGOT_PASSWORD": "Forgot Password?",
     "LOGIN": "Sign in",
     "NO_MEMBER": "Not a member?",
+    "ORDER_DETAILS": "Order Overview",
+    "PAYMENT_METHOD":"Payment Method",
+    "PAYMENT_SHIPPING_DETAILS": "Payment and Shipping Method",
     "PUBLIC_PROFILE": "Public Profile",
     "RESET_PASSWORD": "Reset Password",
     "SIGN_IN_WITH": "or Sign in with:",
