--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -67,9 +67,6 @@
     "UPDATE_USER": "Update User",
     "CANCEL": "Cancel",
     "RESET_PASSWORD": "Reset Password",
-    "CONTINUE_SHOPPING": "Continue shopping",
-    "PROCEED_TO_CHECKOUT": "Proceed to checkout",
-    "ABO": "Buy now"
     "ABO": "Buy now",
     "PROCEED_TO_CHECKOUT": "Proceed to Checkout",
     "CONTINUE_SHOPPING": "Continue Shopping",
@@ -133,8 +130,7 @@
     "PRICING_MONTHLY": "month",
     "PRICING_PICTURE_AMOUNT": "pictures per album",
     "PRICING_CANCEL": "Monthly cancellable",
-    "SEARCH_PHOTOGRAPHER": "Search photographer by ZIP"
-    "PRICING_CANCEL": "Monthly cancellable",
+    "SEARCH_PHOTOGRAPHER": "Search photographer by ZIP",
     "EVENT_ALL_PICTURES": "All pictures",
     "EVENT_SELECTED_PICTURES": "Selected pictures",
     "SEARCH_PICTURES": "Search for pictures by name",
