--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -73,11 +73,9 @@
     "SELECT_PICTURES": "Select all pictures",
     "ADD_PICTURES_TO_CARD": "Add selected pictures to cart",
     "START_UPLOAD": "Start Upload",
-    "DELETE_EVENT": "Delete Event"
+    "DELETE_EVENT": "Delete Event",
     "LOGINNOW": "Login Now",
-    "FIND_EVENT": "Find your event",
-    "PROCEED_TO_CHECKOUT": "Proceed to Checkout",
-    "CONTINUE_SHOPPING": "Continue Shopping"
+    "FIND_EVENT": "Find your event"
   },
   "LABELS": {
     "ADDRESS": "Address",
@@ -112,7 +110,7 @@
     "EVENT_PASSWORD": "Password",
     "PHOTOGRAPHER": "Photographer",
     "EVENT_GUEST": "Guest",
-    "EVENT_ORGANISATOR":"Event Organisator"
+    "EVENT_ORGANISATOR": "Event Organisator"
   },
   "TABLE": {
     "NAME": "Name",
@@ -123,7 +121,8 @@
     "DELETE": "Delete"
   },
   "TEXTS": {
-    "PASSWORT_RESET_MODAL": "To which email address should the password reset email be sent?",
+    "PASSWORT_RESET_MODAL":
+      "To which email address should the password reset email be sent?",
     "PROVIDE_VALID_EMAIL": "Please provide a valid email",
     "PROVIDE_VALID_PASSWORD": "Please provide a valid password",
     "PROVIDE_VALID_URL": "Please provide a valid URL",
@@ -132,7 +131,8 @@
     "PAGE_NOT_FOUND_DESCRIPTION": "Looks like someone left the lens cap on...",
     "PRICING_TITLE": "Pricing Guide",
     "PRICING_GET_STARTED": "Get started",
-    "PRICING_DESCRIPTION": "with your first free album or upgrade to one of our plans.",
+    "PRICING_DESCRIPTION":
+      "with your first free album or upgrade to one of our plans.",
     "PRICING_MONTH": "events per month",
     "PRICING_MONTHLY": "month",
     "PRICING_PICTURE_AMOUNT": "pictures per album",
@@ -141,7 +141,8 @@
     "EVENT_SELECTED_PICTURES": "Selected pictures",
     "SEARCH_PICTURES": "Search for pictures by name",
     "PRICING_ADDITIONAL": "Become a premium member",
-    "PRICING_LIST_POSITION": "With upgrading to a premium account the photographer will always be listed on the first position of nearby photographers.",
+    "PRICING_LIST_POSITION":
+      "With upgrading to a premium account the photographer will always be listed on the first position of nearby photographers.",
     "PRICING_MORE_ATTENTION": "Receive more attention from customers",
     "PRICING_FIRST_POSITION": "Be always on the first position"
   },
