--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,7 +74,7 @@
     "SEND_ORDER": "Pay Pal Button",
     "ABO": "Buy now",
     "SELECT_PICTURES": "Select all pictures",
-    "ADD_PICTURES_TO_CARD": "Add selected pictures to cart",
+    "ADD_PICTURES_TO_CART": "Add selected pictures to cart",
     "START_UPLOAD": "Start Upload",
     "DELETE_EVENT": "Delete Event",
     "LOGINNOW": "Login Now",
