--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -77,7 +77,7 @@
     "ADD_PICTURES_TO_CART": "Add selected pictures to cart",
     "START_UPLOAD": "Start Upload",
     "DELETE_EVENT": "Delete Event",
-    "LOGINNOW": "Login Now",
+    "SINGUP_NOW": "Signup Now",
     "FIND_EVENT": "Find your event",
     "SEND_REPORT": "Send Report"
   },
@@ -85,7 +85,7 @@
     "ADDRESS": "Address",
     "ACCOUNT_DATA": "Account Data",
     "BILLING_ADDRESS": "Billing Address",
-    "BILLING_INFORMATION": "Billing Information",
+    "BILLING_INFORMATION": "Billing Address",
     "CREATE_NEW_EVENT": "Create new event",
     "CREATE": "Create",
     "CONTACT_DETAILS": "Contact-Details",
