--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -79,7 +79,8 @@
     "DELETE_EVENT": "Delete Event",
     "LOGINNOW": "Login Now",
     "FIND_EVENT": "Find your event",
-    "SEND_REPORT": "Send Report"
+    "SEND_REPORT": "Send Report",
+    "ADD_TO_SHOPPING_CART": "Add to shopping cart"
   },
   "LABELS": {
     "ADDRESS": "Address",
@@ -122,7 +123,13 @@
     "EVENT_GUEST": "Guest",
     "EVENT_ORGANISATOR": "Event Organisator",
     "REPORT_IMAGE": "Report Image",
-    "TYPE_HERE": "Type Here"
+    "TYPE_HERE": "Type Here",
+    "IMAGE_VIEW": "Image View",
+    "FORMAT": "Format",
+    "PRICE": "Price",
+    "SMALL": "Small",
+    "MEDIUM": "Medium",
+    "LARGE": "Large"
   },
   "TABLE": {
     "NAME": "Name",
