--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -126,8 +126,7 @@
     "EVENT_ORGANISATOR": "Event Organisator",
     "REPORT_IMAGE": "Report Image",
     "TYPE_HERE": "Type Here",
-    "PASSWORD": "Password"
-    "TYPE_HERE": "Type Here",
+    "PASSWORD": "Password",
     "IMAGE_VIEW": "Image View",
     "FORMAT": "Format",
     "PRICE": "Price",
