--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -26,6 +26,7 @@
     "SIGNUP": "Sign up",
     "CONTACT_DETAILS": "Contact details",
     "PAYMENT_DELIVERY": "Payment/Delivery",
+    "TESTIMONIAL":"Testimonials",
     "CHECK_ORDER": "Check order",
     "CART_QUANTITY": "Quantity",
     "CART_PICTURE": "Picture",
