added event search page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -21,7 +21,8 @@
     "HOME": "Home",
     "LOGOUT": "Log out",
     "EVENTS": "Events",
-    "SEARCH": "Photographer near you",
+    "SEARCH_PHOTOGRAPHER": "Photographer near you",
+    "SEARCH_EVENTS": "Events",
     "SIGNIN": "Sign in",
     "SIGNUP": "Sign up",
     "CONTACT_DETAILS": "Contact details",
