--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -80,7 +80,7 @@
     "ADD_PICTURES_TO_CART": "Add selected pictures to cart",
     "START_UPLOAD": "Start Upload",
     "DELETE_EVENT": "Delete Event",
-    "SINGUP_NOW": "Signup Now",
+    "SINGUP_NOW": "Sign up now",
     "FIND_EVENT": "Find your event",
     "SEND_REPORT": "Send Report"
   },
