--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,14 +74,14 @@
     "PROCEED_TO_CHECKOUT": "Proceed to checkout",
     "BACK": "Back",
     "NEXT": "Next",
-    "SEND_ORDER": "Pay Pal Button",
+    "SEND_ORDER": "Order now",
     "ABO": "Buy now",
     "SELECT_PICTURES": "Select all pictures",
     "DESELECT_PICTURES": "Deselect all pictures",
     "ADD_PICTURES_TO_CART": "Add selected pictures to cart",
     "START_UPLOAD": "Start Upload",
     "DELETE_EVENT": "Delete Event",
-    "SINGUP_NOW": "Signup Now",
+    "SINGUP_NOW": "Sign up Now",
     "FIND_EVENT": "Find your event",
     "SEND_REPORT": "Send Report",
     "ADD_TO_SHOPPING_CART": "Add to shopping cart"
@@ -134,7 +134,10 @@
     "PREVIOUS": "Previous",
     "NEXT": "Next",
     "PASSWORD": "Password",
-    "DELIVERY_COSTS": "Lieferkosten"
+    "DELIVERY_COSTS": "Lieferkosten",
+    "IMPRINT": "Imprint",
+    "DATA_PROTECTION": "Data protection",
+    "GTC": "Terms and conditions"
   },
   "TABLE": {
     "NAME": "Name",
