fixed checkout design
-fixed type presentation in checkout page
-fixed localforage when changing amount

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,7 +33,8 @@
     "CART_PICTURE": "Picture",
     "CART_SIZE": "Size",
     "CART_PRICE": "Price",
-    "CART_TYPE": "Type"
+    "CART_TYPE": "Type",
+    "CART_ITEM": "Item"
   },
   "INPUTS": {
     "ABOUT_YOU": "About you",
