--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -143,7 +143,8 @@
     "DELIVERY_COSTS": "Lieferkosten",
     "IMPRINT": "Imprint",
     "DATA_PROTECTION": "Data protection",
-    "GTC": "Terms and conditions"
+    "GTC": "Terms and conditions",
+    "EVENT_URL": "Event url"
   },
   "TABLE": {
     "NAME": "Name",
