photographer-page prices
added price-model to photographer page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -143,7 +143,9 @@
     "DELIVERY_COSTS": "Lieferkosten",
     "IMPRINT": "Imprint",
     "DATA_PROTECTION": "Data protection",
-    "GTC": "Terms and conditions"
+    "GTC": "Terms and conditions",
+    "PRINT": "Print",
+    "DOWNLOAD": "Download"
   },
   "TABLE": {
     "NAME": "Name",
@@ -154,7 +156,8 @@
     "DELETE": "Delete"
   },
   "TEXTS": {
-    "PASSWORT_RESET_MODAL": "To which email address should the password reset email be sent?",
+    "PASSWORT_RESET_MODAL":
+      "To which email address should the password reset email be sent?",
     "PROVIDE_VALID_EMAIL": "Please provide a valid email",
     "PROVIDE_VALID_PASSWORD": "Please provide a valid password",
     "PROVIDE_VALID_URL": "Please provide a valid URL",
@@ -163,7 +166,8 @@
     "PAGE_NOT_FOUND_DESCRIPTION": "Looks like someone left the lens cap on...",
     "PRICING_TITLE": "Pricing Guide",
     "PRICING_GET_STARTED": "Get started",
-    "PRICING_DESCRIPTION": "with your first free album or upgrade to one of our plans.",
+    "PRICING_DESCRIPTION":
+      "with your first free album or upgrade to one of our plans.",
     "PRICING_MONTH": "events per month",
     "PRICING_MONTHLY": "month",
     "PRICING_PICTURE_AMOUNT": "pictures per album",
@@ -173,7 +177,8 @@
     "EVENT_SELECTED_PICTURES": "Selected pictures",
     "SEARCH_PICTURES": "Search for pictures by name",
     "PRICING_ADDITIONAL": "Become a premium member",
-    "PRICING_LIST_POSITION": "With upgrading to a premium account the photographer will always be listed on the first position of nearby photographers.",
+    "PRICING_LIST_POSITION":
+      "With upgrading to a premium account the photographer will always be listed on the first position of nearby photographers.",
     "PRICING_MORE_ATTENTION": "Receive more attention from customers",
     "PRICING_FIRST_POSITION": "Be always on the first position",
     "NO_PHOTOGRAPHERS_FOUND": "There are no photographers in your area",
